--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,71 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>			
+			
+			<!-- create a production build of the frontend -->
+			<plugin>
+			    <groupId>com.github.eirslett</groupId>
+			    <artifactId>frontend-maven-plugin</artifactId>
+			    <version>1.6</version>
+			    <configuration>
+			        <workingDirectory>client</workingDirectory>
+			        <installDirectory>target</installDirectory>
+			    </configuration>
+			    <executions>
+			        <execution>
+			            <id>install node and npm</id>
+			            <goals>
+			                <goal>install-node-and-npm</goal>
+			            </goals>
+			            <configuration>
+			                <nodeVersion>v8.9.4</nodeVersion>
+			                <npmVersion>5.6.0</npmVersion>
+			            </configuration>
+			        </execution>
+			        <execution>
+			            <id>npm install</id>
+			            <goals>
+			                <goal>npm</goal>
+			            </goals>
+			            <configuration>
+			                <arguments>install</arguments>
+			            </configuration>
+			        </execution>
+			        <execution>
+			            <id>npm run build</id>
+			            <goals>
+			                <goal>npm</goal>
+			            </goals>
+			            <configuration>
+			                <arguments>run build</arguments>
+			            </configuration>
+			        </execution>
+			    </executions>
 			</plugin>
+			
+			<!-- copy the production build into ${target/classes/public} -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-antrun-plugin</artifactId>
+			    <executions>
+			        <execution>
+			        	<id>copy-client-to-classess</id>
+			            <phase>generate-resources</phase>
+			            <configuration>
+			                <target>
+			                    <copy todir="${project.build.directory}/classes/public">
+			                        <fileset dir="${project.basedir}/client/build"/>
+			                    </copy>
+			                </target>
+			            </configuration>
+			            <goals>
+			                <goal>run</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+				
 		</plugins>
 	</build>
 
